objects/Advance__c.object
<CustomObject>
    <fields>
        <fullName>Advance_Date__c</fullName>
        <label>Advance Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Docs_Date__c</fullName>
        <label>Advance Docs Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Request_Date__c</fullName>
        <label>Advance Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Signed_Date__c</fullName>
        <label>Advance Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Status__c</fullName>
        <formula>IF(
  ISBLANK(Approval_Status__c), &quot;&quot;,
  IF(
    Approval_Status__c = &quot;Pending&quot;, &quot;Requested&quot;,
    IF(
      Approval_Status__c = &quot;Rejected&quot;, &quot;Rejected&quot;,
      IF(
        NOT(ISBLANK(Uncollected_Date__c)), &quot;Uncollected&quot;,
        IF(
          NOT(ISBLANK(Repaid_Date__c)), &quot;Repaid&quot;,
          IF(
            NOT(ISBLANK(Advance_Date__c)), &quot;Released&quot;,
            IF(
              NOT(ISBLANK(Advance_Signed_Date__c)), &quot;Signed&quot;,
              IF(
                NOT(ISBLANK(Advance_Docs_Date__c)), &quot;Drafted&quot;,
                &quot;Approved&quot;
              )
            )
          )
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Advance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Set through approval process to track the status of the approval; used as part of the formula for the Advance Status field</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Advances</relationshipLabel>
        <relationshipName>Advances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Repaid_Date__c</fullName>
        <label>Repaid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Uncollected_Date__c</fullName>
        <label>Uncollected Date</label>
        <type>Date</type>
    </fields>
    <label>Advance</label>
    <nameField>
        <displayFormat>Advance-{0000}</displayFormat>
        <label>Advance #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Repaid_Date_or_Uncollected_Date</fullName>
        <active>true</active>
        <description>Ensure that either Repaid Date or Uncollected Date are populated, not both</description>
        <errorConditionFormula>AND( 
  NOT(ISBLANK(Repaid_Date__c)),
  NOT(ISBLANK(Uncollected_Date__c))
)</errorConditionFormula>
        <errorDisplayField>Uncollected_Date__c</errorDisplayField>
        <errorMessage>Repaid Date and Uncollected Date cannot both be populated.  Please remove one of these date values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Opportunity_Reparenting</fullName>
        <active>true</active>
        <description>Only the following profiles may reparent the Advance:  Specialty Finance - Processors, Specialty Finance - Admin</description>
        <errorConditionFormula>AND(
  NOT(ISNEW()),
  NOT(
    OR(
      $Profile.Name = &quot;Specialty Finance - Processors&quot;,
      $Profile.Name = &quot;Specialty Finance - Admin&quot;,
      $Profile.Name = &quot;API Service Account&quot;,
      $Profile.Name = &quot;System Administrator&quot;
    )
  ),
  ISCHANGED(Opportunity__c) 
)</errorConditionFormula>
        <errorMessage>Only Processors and Admin are authorized to change the Opportunity associated with this Advance.</errorMessage>
    </validationRules>
</CustomObject>